--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: elixir
 elixir:
   - 1.4
+env:
+  - MIX_ENV=test
 script:
-  - mix do deps.get, compile --warnings-as-errors, coveralls.json
+  - mix do deps.get, compile --warnings-as-errors, coveralls
 after_success:
   - bash <(curl -s https://codecov.io/bash)
