add export statement to .env_sample for #32

--- a/.env_sample
+++ b/.env_sample
@@ -1,2 +1,2 @@
-GITHUB_CLIENT_ID=d6fca75c63daa014c187
-GITHUB_CLIENT_SECRET=8eeb143935d1a505692aaef856db9b4da8245f3c
+export GITHUB_CLIENT_ID=d6fca75c63daa014c187
+export GITHUB_CLIENT_SECRET=8eeb143935d1a505692aaef856db9b4da8245f3c
