--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,27 +1,33 @@
-# create this in .github/workflows/ci.yml
-on: push
+name: Elixir CI
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  test:
-    name: OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
+  build:
+    name: Build and test
     runs-on: ubuntu-latest
-    env:
-      MIX_ENV: test
-    strategy:
-      matrix:
-        elixir: [ 1.11.0, 1.12.0 , 1.13.0]
-        otp: [ 23.0.0, 24.0.0 ]
-        exclude:
-          - elixir: 1.11.0
-            otp: 24.0.0
-
     steps:
-      - uses: actions/checkout@v2
-      - uses: erlef/setup-beam@v1
-        with:
-          otp-version: '24.1'
-          elixir-version: '1.12.2'
-      - run: mix deps.get
-      - run: mix format --check-formatted
-      - run: mix test
-      - run: mix credo --strict
+    - uses: actions/checkout@v2
+    - name: Set up Elixir
+      uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
+      with:
+        elixir-version: '1.12.3' # Define the elixir version [required]
+        otp-version: '24.0.2' # Define the OTP version [required]
+    - name: Restore dependencies cache
+      uses: actions/cache@v2
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+    - name: Install dependencies
+      run: mix deps.get
+    - name: Run Tests
+      run: mix coveralls.json
+      env:
+        MIX_ENV: test
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
